Instert record to table every minute

--- a/hangfire-cluster-web/appsettings.json
+++ b/hangfire-cluster-web/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Server=192.168.163.130\\SCOM;Database=Hangfire-App-Cluster;User Id=sa;Password=P@ssword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
