--- a/hangfire-cluster-web/hangfire-cluster-web.csproj
+++ b/hangfire-cluster-web/hangfire-cluster-web.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>hangfire_cluster_web</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Hangfire" Version="1.7.18" />
+  </ItemGroup>
+
 </Project>
